  some irregularity between steps.
- Rework esp32 interrupt code. Works, but the PCNT module is hard to control
- Fix issue #29 and a slow start of a ramp (identified by #29)
- RampGenerator: Support coasting at lower speed for a couple of steps
  to limit interrupt rate for esp32 (or even rejected commands)
- More tests

0.17.1:
- esp32: Fixed one/two spurious step pulses after reset mainly (issue #29)
- avr: reworked ISR for more reliable operation (correct steps). (issue #31)
  Remaining risk (primarily three steppers in parallel in 2560) can cause
  an CPU overload and stepper stopping/not running smooth
- Fix issue #32
- Remove interrupts/noInterrupts protection for shared auto enable function.
  => Thus there is a small time window during auto disable, that a new command issued
     may loose steps. This will be addressed in a subsequent release

0.17.0:
- avr: stepper definition support via AVRStepperPins.h
- 2560: all timers and channels are checked with one test
- addQueueEntry(): remove test for steps >= 128
- new function moveByAcceleration() to control stepper speed by positive and
  negative acceleration values.
- stopMove() will not run to stop, if any move command is called afterwards.
  The error code MOVE_ERR_STOP_ONGOING has been removed.
- StepperDemo extended:
	- a: Allows to control the stepper speed by positive/negative acceleration values

0.16.8:
- Fix for issue #30: for dirPin undefined, digitalWrite/pinMode was called

0.16.7:
- Avoid unnecessary direction pin toggle on direction change after motor stop
- Fix MAX_STEPPER for atmega2560
- Extend simavr tests for atmega2560 and one test for each timer for both varians

0.16.6:
- bugfix in setEnablePin(): if called with PIN_UNDEFINED, that value was used with pinMode and digitalWrite()
- Use simavr to perform regression test for avr on HW-simulation