@@ -20,6 +20,7 @@ test_07: test_07.o FastAccelStepper.o PoorManFloat.o StepperISR_test.o RampGener
 test_08: test_08.o FastAccelStepper.o PoorManFloat.o StepperISR_test.o RampGenerator.o
 test_08: test_08.o FastAccelStepper.o PoorManFloat.o StepperISR_test.o RampGenerator.o
 test_09: test_09.o FastAccelStepper.o PoorManFloat.o StepperISR_test.o RampGenerator.o
+test_10: test_10.o FastAccelStepper.o PoorManFloat.o StepperISR_test.o RampGenerator.o
 
 test_01.o: test_01.cpp $(LIB_H) RampChecker.h stubs.h
 test_02.o: test_02.cpp $(LIB_H) RampChecker.h stubs.h
@@ -30,6 +31,7 @@ test_06.o: test_06.cpp $(LIB_H) RampChecker.h stubs.h
 test_07.o: test_07.cpp $(LIB_H) RampChecker.h stubs.h
 test_08.o: test_08.cpp $(LIB_H) RampChecker.h stubs.h
 test_09.o: test_09.cpp $(LIB_H) RampChecker.h stubs.h
+test_10.o: test_10.cpp $(LIB_H) RampChecker.h stubs.h
 
 FastAccelStepper.o: ../src/FastAccelStepper.cpp ../src/FastAccelStepper.h ../src/PoorManFloat.h ../src/StepperISR.h stubs.h ../src/RampGenerator.h ../src/common.h
 	$(COMPILE.cpp) $< -o $@
